<resources>

    <string name="str_app_banner">FlipKart Shopping</string>
    <string name="str_login_email">Email</string>
    <string name="str_login_password">Password</string>
    <string name="str_login_password_confirm">Confirm Password</string>
    <string name="str_user_name">Full Name</string>
    <string name="str_login_to_account">Login</string>
    <string name="str_create_new_account">Register New Account</string>
    <string name="str_link_to_registration">Don\'t have an account? Create One!</string>
    <string name="str_link_to_login">Already have an account? Login here</string>
    <string name="str_select_category">1. Select a Category</string>
    <string name="str_select_item">2. Select an Item</string>
    <string name="str_book_details">3. Check the details of your Selection</string>
    <string name="str_book_name">Name</string>
    <string name="str_book_author">Author</string>
    <string name="str_book_price">Unit Price</string>
    <string name="str_book_price_currency">USD</string>
    <string name="str_book_cover">Book Cover</string>
    <string name="str_add_to_cart">Add to Cart</string>
    <string name="str_proceed_to_checkout">Proceed to Checkout</string>
    <string name="str_shopping_cart">Contents of your Shopping Cart</string>
    <string name="str_empty_cart">Your Shopping Cart is empty</string>
    <string name="str_update_qty">Update Quantities</string>
    <string name="str_remove_items">Remove Items</string>
    <string name="str_checkout">Checkout</string>
    <string name="str_update_cart">Update Shopping Cart</string>
    <string name="str_return_to_additems">Add More Items</string>
    <string name="str_proceed_to_confirm_order">Proceed to confirm order</string>
    <string name="str_purchase_summary">Purchase Summary</string>
    <string name="str_grand_total">Grand Total</string>
    <string name="str_start_another_purchase">Start Another Purchase</string>
    <string name="str_exit_app">Exit Application</string>
    <string name="str_app_logo">Application Logo</string>
    <string name="str_sales_tax">Sales Tax(%)</string>
    <string name="str_sales_tax_calculated">Sales Tax</string>
    <string name="str_sub_total">Sub Total</string>
    <string name="str_total_cost">Total Cost</string>
    <string name="app_name">Book Shop</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_bookshop_login">Login to your account</string>
    <string name="title_activity_register">Create your account</string>
    <string name="title_activity_item_display">Select from available items</string>
    <string name="title_activity_cart_display">View or update your shopping cart</string>
    <string name="title_activity_purchase_summary">Summary of your latest purchase</string>

</resources>