<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <!-- Login screen starts -->
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dip"
    android:orientation="vertical">

    <!-- Application banner -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:contentDescription="@string/app_name"
        android:drawableLeft="@drawable/sc68"
        android:drawablePadding="20dip"
        android:text="@string/str_app_banner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0b84aa" />
    
    <!-- Email label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_login_email"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/etLoginEmailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textColor="#000000" />

    <!-- Password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login_password"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000000" />
   
    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/str_login_to_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" />
   
    <!-- Registration link -->
    <TextView
        android:id="@+id/tvRegisterHere"
        android:text="@string/str_link_to_registration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:gravity="center"
        android:textSize="20dip"
        android:textColor="#74609E" />
        
  </LinearLayout>
  <!-- Login screen ends -->
  
</ScrollView>