<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >    
        
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <!-- Category and Item List -->
        <LinearLayout
            android:id="@+id/llCategoryItemHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip"
            android:gravity="left" >
            <!-- Category Label -->
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:text="@string/str_select_category"
                android:textColor="#372c24"/>
            <Spinner 
                android:id="@+id/spCategoryList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <!-- Item List Label -->
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_select_item"
                android:paddingTop="10dip"
                android:paddingBottom="5dip"
                android:textColor="#372c24"/>
            <Spinner 
                android:id="@+id/spItemList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Add to Cart Button and Skip to Checkout link -->
        <LinearLayout
            android:id="@+id/llCategoryItemFooter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="10dip"
            android:gravity="center">

            <!-- Add to cart Button -->
            <Button 
                android:id="@+id/btnAdd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:text="@string/str_add_to_cart" />

            <!-- Skip and Proceed to Checkout link -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_proceed_to_checkout"
                android:textSize="12dip"
                android:textColor="#0000ff" />
        </LinearLayout>

        <!-- Selected Book details block starts -->
        <TableLayout
            android:id="@+id/tlSelectedItemDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llCategoryItemHeader"
            android:layout_above="@+id/llCategoryItemFooter"
            android:padding="20dip"
            android:stretchColumns="0,1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_book_details"
                android:textColor="#372c24" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:text="@string/str_book_name"
                android:textColor="#372c24"/>
            
            <TextView
                android:id="@+id/tvBookName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#0000FF"
                android:background="@drawable/back"/>
            
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:text="@string/str_book_author"
                    android:textColor="#372c24"
                    android:layout_column="0"/>
                <TextView
                    android:text="@string/str_book_price"
                    android:layout_marginLeft="15dip"
                    android:textColor="#372c24"
                    android:layout_column="1"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/tvBookAuthor"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:background="@drawable/back"/>
                <TextView
                    android:id="@+id/tvBookPrice"
                    android:layout_marginLeft="15dip"
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:background="@drawable/back"/>
            </TableRow>

        </TableLayout>
    </RelativeLayout>    
</ScrollView>